Fix winners banner spacing

--- a/templates/static/css/style.css
+++ b/templates/static/css/style.css
@@ -274,6 +274,11 @@ ol li, ol li ul li {
 
 @media only screen
 and (min-width: 768px) {
+  .winners-banner-month {
+    width: 29%;
+    padding-top: 6px;
+  }
+
   .winners-banner-month h2 {
     text-align: right;
     padding-top: 0;
@@ -283,6 +288,10 @@ and (min-width: 768px) {
   .winners-banner-month h4 {
     text-align: right;
     padding-right: 10px;
+  }
+
+  .winners-banner-winner-col {
+    width: 23%;
   }
 }
 
